# torodofi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config  example.cfg  example.md  example_tasks.md  main.cpp  torodofi.cpp  torodofi_config.h  torodofi_task.h
.ugly/: example_tasks.md
.ugly/torodofi_lib/: config.cpp  interface.cpp
torodofi/: App.cpp  App.hpp  logic.cpp  logic.hpp  types.cpp  types.hpp
torodofi/Config/: Config.cpp  Config.hpp
torodofi/Gui/: Gui.cpp  Gui.hpp
torodofi/Tasks/: Task.cpp  Task.hpp  TaskContainer.cpp  TaskContainer.hpp
torodofi_lib/: config.cpp  config.hpp  functions.cpp  functions.hpp  interface.cpp  interface.hpp  task.cpp  task.h  task.hpp
ugly/: main.cpp
ugly/torodofi_lib/: task.cpp
